feat: added swagger annotation for playlist handlers
